Add dummy content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>The Odin Project—Admin Dashboard</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="sidebar">
+        <div class="sidebar-heading">
+          <h1>Dashboard</h1>
+        </div>
+        <div class="sidebar-main">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Messages</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Tasks</a></li>
+            <li><a href="#">Communities</a></li>
+          </ul>
+        </div>
+        <div class="sidebar-settings">
+          <ul>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Privacy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="header">
+        <div class="header-search">
+          <input type="search" name="" id="">
+        </div>
+        <div class="header-account">
+          <div class="avatar placeholder-small"></div>
+          <h2>Morgan Oakley</h2>
+        </div>
+        <div class="header-greeting">
+          <h3>Hi there,</h3>
+          <div class="avatar placeholder-large"></div>
+          <h2>Morgan Oakley (@morgan)</h2>
+        </div>
+        <div class="header-actions">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
+      </div>
+      <div class="main-content">
+        <div class="projects">
+          <h2>Your Projects</h2>
+          <div class="project-card">
+            <h3 class="project-title">Super Cool Project</h3>
+            <p class="project-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              fugit doloribus laudantium cupiditate numquam ab.
+            </p>
+            <div class="project-actions">
+              <button class="star"></button>
+              <button class="watchlist"></button>
+              <button class="share"></button>
+            </div>
+          </div>
+          <div class="project-card">
+            <h3 class="project-title">Less Cool Project</h3>
+            <p class="project-description">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Necessitatibus laboriosam ad debitis deserunt, ab delectus ratione
+              voluptate in quibusdam odit.
+            </p>
+            <div class="project-actions">
+              <button class="star"></button>
+              <button class="watchlist"></button>
+              <button class="share"></button>
+            </div>
+          </div>
+          <div class="project-card">
+            <h3 class="project-title">Impossible App</h3>
+            <p class="project-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quam
+              est nam?
+            </p>
+            <div class="project-actions">
+              <button class="star"></button>
+              <button class="watchlist"></button>
+              <button class="share"></button>
+            </div>
+          </div>
+          <div class="project-card">
+            <h3 class="project-title">Easy Peasy App</h3>
+            <p class="project-description">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Doloremque earum sunt, quaerat dicta ipsum ex quod. Eius iste
+              tempore corporis voluptatibus provident repellat itaque,
+              assumenda, cum necessitatibus ipsam perferendis reprehenderit.
+            </p>
+            <div class="project-actions">
+              <button class="star"></button>
+              <button class="watchlist"></button>
+              <button class="share"></button>
+            </div>
+          </div>
+          <div class="project-card">
+            <h3 class="project-title">Ad Blocker</h3>
+            <p class="project-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium harum exercitationem veniam itaque dolorum ratione
+              obcaecati alias neque!
+            </p>
+            <div class="project-actions">
+              <button class="star"></button>
+              <button class="watchlist"></button>
+              <button class="share"></button>
+            </div>
+          </div>
+          <div class="project-card">
+            <h3 class="project-title">Money Maker</h3>
+            <p class="project-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+              voluptatum architecto nisi sequi enim delectus minima alias et
+              repudiandae blanditiis.
+            </p>
+            <div class="project-actions">
+              <button class="star"></button>
+              <button class="watchlist"></button>
+              <button class="share"></button>
+            </div>
+          </div>
+        </div>
+        <div class="announcements">
+          <h2>Announcements</h2>
+          <div class="announcements-card">
+            <div class="announcement-item">
+              <h3>Site Maintenance</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Dignissimos cupiditate, illo molestias ipsum vitae quo laboriosam
+              fugit debitis doloremque aliquam enim nobis quibusdam velit
+              consequatur?</p>
+            </div>
+            <div class="announcement-item">
+              <h3>Community Share Day</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque
+              possimus suscipit doloremque non explicabo porro eius nisi vitae
+              dolore officiis, earum laboriosam numquam accusamus labore nobis
+              dolores natus, assumenda neque.</p>
+            </div>
+            <div class="announcement-item">
+              <h3>Updated Privacy Policy</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              consectetur esse enim, quisquam modi magni vero? Hic, beatae?</p>
+            </div>
+          </div>
+        </div>
+        <div class="trending">
+          <h2>Trending</h2>
+          <div class="trending-card">
+            <div class="trending-item">
+              <div class="avatar placeholder-small"></div>
+              <h3 class="username">@tegan</h3>
+              <h2 class="trending-project">World Peace Builder</h2>
+            </div>
+            <div class="trending-item">
+              <div class="avatar placeholder-small"></div>
+              <h3 class="username">@morgan</h3>
+              <h2 class="trending-project">Super Cool Project</h2>
+            </div>
+            <div class="trending-item">
+              <div class="avatar placeholder-small"></div>
+              <h3 class="username">@kendall</h3>
+              <h2 class="trending-project">Life Changing App</h2>
+            </div>
+            <div class="trending-item">
+              <div class="avatar placeholder-small"></div>
+              <h3 class="username">@alex</h3>
+              <h2 class="trending-project">No Traffic Maker</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
