--- a/index.html
+++ b/index.html
@@ -10,24 +10,50 @@
   <body>
     <div class="container">
       <div class="sidebar">
-        <div class="sidebar-heading">
-          <h1>Dashboard</h1>
-        </div>
-        <div class="sidebar-main">
+          <div class="sidebar-head">
+            <div class="placeholder-1"></div>
+            <h1>Dashboard</h1>
+          </div>
+        <div class="sidebar-nav">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Messages</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Tasks</a></li>
-            <li><a href="#">Communities</a></li>
+            <li>
+              <div class="placeholder-0"></div>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <div class="placeholder-0"></div>
+              <a href="#">Profile</a>
+            </li>
+            <li>
+              <div class="placeholder-0"></div>
+              <a href="#">Messages</a>
+            </li>
+            <li>
+              <div class="placeholder-0"></div>
+              <a href="#">History</a>
+            </li>
+            <li>
+              <div class="placeholder-0"></div>
+              <a href="#">Tasks</a>
+            </li>
+            <li>
+              <div class="placeholder-0"></div>
+              <a href="#">Communities</a>
+            </li>
           </ul>
-        </div>
-        <div class="sidebar-settings">
           <ul>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Privacy</a></li>
+            <li>
+              <div class="placeholder-0"></div>
+              <a href="#">Settings</a>
+            </li>
+            <li>
+              <div class="placeholder-0"></div>
+              <a href="#">Support</a>
+            </li>
+            <li>
+              <div class="placeholder-0"></div>
+              <a href="#">Privacy</a>
+            </li>
           </ul>
         </div>
       </div>
