Adjust layout and positioning for header elements

--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
         </div>
       </div>
       <div class="header">
-        <div class="header-search">
+        <div class="header-cell searchbar">
           <div class="placeholder-0"></div>
           <input type="search" name="" id="">
         </div>
-        <div class="header-account">
+        <div class="header-cell account">
           <div class="avatar placeholder-1"></div>
-          <h2>Morgan Oakley</h2>
+          <h3>Morgan Oakley</h2>
         </div>
-        <div class="header-message">
+        <div class="header-cell header-message">
           <div class="avatar placeholder-2"></div>
           <div class="message-wrapper">
             <h3>Hi there,</h3>
             <h2>Morgan Oakley (@morgan)</h2>
           </div>
         </div>
-        <div class="header-actions">
+        <div class="header-cell account-actions">
           <button>New</button>
           <button>Upload</button>
           <button>Share</button>
