Adjust layout and positioning of projects section

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 fugit doloribus laudantium cupiditate numquam ab.
               </p>
               <div class="project-actions">
-                <button class="star"></button>
-                <button class="watchlist"></button>
-                <button class="share"></button>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
               </div>
             </div>
             <div class="project-card">
@@ -103,9 +103,9 @@
                 ratione voluptate in quibusdam odit.
               </p>
               <div class="project-actions">
-                <button class="star"></button>
-                <button class="watchlist"></button>
-                <button class="share"></button>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
               </div>
             </div>
             <div class="project-card">
@@ -115,9 +115,9 @@
                 quam est nam?
               </p>
               <div class="project-actions">
-                <button class="star"></button>
-                <button class="watchlist"></button>
-                <button class="share"></button>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
               </div>
             </div>
             <div class="project-card">
@@ -126,12 +126,12 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 Doloremque earum sunt, quaerat dicta ipsum ex quod. Eius iste
                 tempore corporis voluptatibus provident repellat itaque,
-                assumenda, cum necessitatibus ipsam perferendis reprehenderit.
+                assumenda.
               </p>
               <div class="project-actions">
-                <button class="star"></button>
-                <button class="watchlist"></button>
-                <button class="share"></button>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
               </div>
             </div>
             <div class="project-card">
@@ -142,9 +142,9 @@
                 obcaecati alias neque!
               </p>
               <div class="project-actions">
-                <button class="star"></button>
-                <button class="watchlist"></button>
-                <button class="share"></button>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
               </div>
             </div>
             <div class="project-card">
@@ -155,9 +155,9 @@
                 repudiandae blanditiis.
               </p>
               <div class="project-actions">
-                <button class="star"></button>
-                <button class="watchlist"></button>
-                <button class="share"></button>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
+                <div class="placeholder-0"></div>
               </div>
             </div>
           </div>
@@ -200,28 +200,28 @@
               <div class="avatar placeholder-1"></div>
               <div class="trending-details">
                 <h3 class="username">@tegan</h3>
-                <h2 class="trending-project">World Peace Builder</h2>
+                <h3 class="trending-project">World Peace Builder</h2>
               </div>
             </div>
             <div class="trending-item">
               <div class="avatar placeholder-1"></div>
               <div class="trending-details">
                 <h3 class="username">@morgan</h3>
-                <h2 class="trending-project">Super Cool Project</h2>
+                <h3 class="trending-project">Super Cool Project</h2>
               </div>
             </div>
             <div class="trending-item">
               <div class="avatar placeholder-1"></div>
               <div class="trending-details">
                 <h3 class="username">@kendall</h3>
-                <h2 class="trending-project">Life Changing App</h2>
+                <h3 class="trending-project">Life Changing App</h2>
               </div>
             </div>
             <div class="trending-item">
               <div class="avatar placeholder-1"></div>
               <div class="trending-details">
                 <h3 class="username">@alex</h3>
-                <h2 class="trending-project">No Traffic Maker</h2>
+                <h3 class="trending-project">No Traffic Maker</h2>
               </div>
             </div>
           </div>
