Adjust layout and positioning of trending section, right sidebar

--- a/index.html
+++ b/index.html
@@ -162,66 +162,63 @@
             </div>
           </div>
         </div>
-        <div class="announcements">
-          <h2>Announcements</h2>
-
-          <div class="announcements-card">
-              <div class="announcement-item">
-                <h3>Site Maintenance</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Dignissimos cupiditate, illo molestias ipsum vitae quo
-                  laboriosam fugit debitis doloremque aliquam enim nobis quibusdam
-                  velit consequatur?
-                </p>
+        <div class="sidebar-right">
+          <div class="announcements">
+            <h2>Announcements</h2>
+            <div class="announcements-card">
+                <div class="announcement-item">
+                  <h3>Site Maintenance</h3>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem
+                    eligendi Lorem.
+                  </p>
+                </div>
+                <div class="announcement-item">
+                  <h3>Community Share Day</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Facilis in quisquam natus?
+                  </p>
+                </div>
+                <div class="announcement-item">
+                  <h3>Updated Privacy Policy</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                    consectetur esse enim, quisquam.
+                  </p>
+                </div>
               </div>
-              <div class="announcement-item">
-                <h3>Community Share Day</h3>
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque
-                  possimus suscipit doloremque non explicabo porro eius nisi vitae
-                  dolore officiis, earum laboriosam numquam accusamus labore nobis
-                  dolores natus, assumenda neque.
-                </p>
+          </div>
+          <div class="trending">
+            <h2>Trending</h2>
+            <div class="trending-card">
+              <div class="trending-item">
+                <div class="avatar placeholder-1"></div>
+                <div class="trending-details">
+                  <h3 class="username">@tegan</h3>
+                  <h3 class="trending-project">World Peace Builder</h2>
+                </div>
               </div>
-              <div class="announcement-item">
-                <h3>Updated Privacy Policy</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                  consectetur esse enim, quisquam modi magni vero? Hic, beatae?
-                </p>
+              <div class="trending-item">
+                <div class="avatar placeholder-1"></div>
+                <div class="trending-details">
+                  <h3 class="username">@morgan</h3>
+                  <h3 class="trending-project">Super Cool Project</h2>
+                </div>
               </div>
-            </div>
-        </div>
-        <div class="trending">
-          <h2>Trending</h2>
-          <div class="trending-card">
-            <div class="trending-item">
-              <div class="avatar placeholder-1"></div>
-              <div class="trending-details">
-                <h3 class="username">@tegan</h3>
-                <h3 class="trending-project">World Peace Builder</h2>
+              <div class="trending-item">
+                <div class="avatar placeholder-1"></div>
+                <div class="trending-details">
+                  <h3 class="username">@kendall</h3>
+                  <h3 class="trending-project">Life Changing App</h2>
+                </div>
               </div>
-            </div>
-            <div class="trending-item">
-              <div class="avatar placeholder-1"></div>
-              <div class="trending-details">
-                <h3 class="username">@morgan</h3>
-                <h3 class="trending-project">Super Cool Project</h2>
-              </div>
-            </div>
-            <div class="trending-item">
-              <div class="avatar placeholder-1"></div>
-              <div class="trending-details">
-                <h3 class="username">@kendall</h3>
-                <h3 class="trending-project">Life Changing App</h2>
-              </div>
-            </div>
-            <div class="trending-item">
-              <div class="avatar placeholder-1"></div>
-              <div class="trending-details">
-                <h3 class="username">@alex</h3>
-                <h3 class="trending-project">No Traffic Maker</h2>
+              <div class="trending-item">
+                <div class="avatar placeholder-1"></div>
+                <div class="trending-details">
+                  <h3 class="username">@alex</h3>
+                  <h3 class="trending-project">No Traffic Maker</h2>
+                </div>
               </div>
             </div>
           </div>
