Add card styling

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <input type="search" name="" id="">
         </div>
         <div class="header-cell account">
+          <div class="placeholder-0"></div>
           <div class="avatar placeholder-1"></div>
           <h3>Morgan Oakley</h2>
         </div>
@@ -83,9 +84,9 @@
         <div class="projects">
           <h2>Your Projects</h2>
           <div class="cards-container">
-            <div class="project-card">
+            <div class="project-card card">
               <h3 class="project-title">Super Cool Project</h3>
-              <p class="project-description">
+              <p class="project-description secondary-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 fugit doloribus laudantium cupiditate numquam ab.
               </p>
@@ -95,9 +96,9 @@
                 <div class="placeholder-0"></div>
               </div>
             </div>
-            <div class="project-card">
+            <div class="project-card card">
               <h3 class="project-title">Less Cool Project</h3>
-              <p class="project-description">
+              <p class="project-description secondary-text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Necessitatibus laboriosam ad debitis deserunt, ab delectus
                 ratione voluptate in quibusdam odit.
@@ -108,9 +109,9 @@
                 <div class="placeholder-0"></div>
               </div>
             </div>
-            <div class="project-card">
+            <div class="project-card card">
               <h3 class="project-title">Impossible App</h3>
-              <p class="project-description">
+              <p class="project-description secondary-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
                 quam est nam?
               </p>
@@ -120,9 +121,9 @@
                 <div class="placeholder-0"></div>
               </div>
             </div>
-            <div class="project-card">
+            <div class="project-card card">
               <h3 class="project-title">Easy Peasy App</h3>
-              <p class="project-description">
+              <p class="project-description secondary-text">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 Doloremque earum sunt, quaerat dicta ipsum ex quod. Eius iste
                 tempore corporis voluptatibus provident repellat itaque,
@@ -134,9 +135,9 @@
                 <div class="placeholder-0"></div>
               </div>
             </div>
-            <div class="project-card">
+            <div class="project-card card">
               <h3 class="project-title">Ad Blocker</h3>
-              <p class="project-description">
+              <p class="project-description secondary-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Laudantium harum exercitationem veniam itaque dolorum ratione
                 obcaecati alias neque!
@@ -147,9 +148,9 @@
                 <div class="placeholder-0"></div>
               </div>
             </div>
-            <div class="project-card">
+            <div class="project-card card">
               <h3 class="project-title">Money Maker</h3>
-              <p class="project-description">
+              <p class="project-description secondary-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
                 voluptatum architecto nisi sequi enim delectus minima alias et
                 repudiandae blanditiis.
@@ -165,24 +166,24 @@
         <div class="sidebar-right">
           <div class="announcements">
             <h2>Announcements</h2>
-            <div class="announcements-card">
+            <div class="announcements-card card">
                 <div class="announcement-item">
                   <h3>Site Maintenance</h3>
-                  <p>
+                  <p class="secondary-text">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem
                     eligendi Lorem.
                   </p>
                 </div>
                 <div class="announcement-item">
                   <h3>Community Share Day</h3>
-                  <p>
+                  <p class="secondary-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Facilis in quisquam natus?
                   </p>
                 </div>
                 <div class="announcement-item">
                   <h3>Updated Privacy Policy</h3>
-                  <p>
+                  <p class="secondary-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
                     consectetur esse enim, quisquam.
                   </p>
@@ -191,33 +192,33 @@
           </div>
           <div class="trending">
             <h2>Trending</h2>
-            <div class="trending-card">
+            <div class="trending-card card">
               <div class="trending-item">
                 <div class="avatar placeholder-1"></div>
                 <div class="trending-details">
                   <h3 class="username">@tegan</h3>
-                  <h3 class="trending-project">World Peace Builder</h2>
+                  <h3 class="trending-project secondary-text">World Peace Builder</h2>
                 </div>
               </div>
               <div class="trending-item">
                 <div class="avatar placeholder-1"></div>
                 <div class="trending-details">
                   <h3 class="username">@morgan</h3>
-                  <h3 class="trending-project">Super Cool Project</h2>
+                  <h3 class="trending-project secondary-text">Super Cool Project</h2>
                 </div>
               </div>
               <div class="trending-item">
                 <div class="avatar placeholder-1"></div>
                 <div class="trending-details">
                   <h3 class="username">@kendall</h3>
-                  <h3 class="trending-project">Life Changing App</h2>
+                  <h3 class="trending-project secondary-text">Life Changing App</h2>
                 </div>
               </div>
               <div class="trending-item">
                 <div class="avatar placeholder-1"></div>
                 <div class="trending-details">
                   <h3 class="username">@alex</h3>
-                  <h3 class="trending-project">No Traffic Maker</h2>
+                  <h3 class="trending-project secondary-text">No Traffic Maker</h2>
                 </div>
               </div>
             </div>
